--- a/index.html
+++ b/index.html
@@ -4,15 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RWD</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <title>Hamburger</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
 </head>
 
 <body>
-    <div class="boxContainer">
-        <div class="boxOne"></div>
-        <div class="boxTwo"></div>
-    </div>
+    <header>
+        <input type="checkbox" id="hamb">
+        <label for="hamb" class="hamb">
+            <div class="bars">
+                <i class="fas fa-bars"> </i>
+            </div>
+        </label>
+        <div class="menu">
+            <nav>
+                <ul class="ul">
+                    <li>Inicio</li>
+                    <li>Info</li>
+                    <li>Imágenes</li>
+                    <li>Contacto</li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
 </body>
 
 </html>
