--- a/index.html
+++ b/index.html
@@ -4,28 +4,283 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hamburger</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Diario</title>
+    <link rel="stylesheet" href="styles/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
 </head>
 
 <body>
     <header>
-        <input type="checkbox" id="hamb">
-        <label for="hamb" class="hamb">
-           <i class="fas fa-bars"> </i>
-        </label>
-        <div class="menu">
-            <nav>
-                <ul class="ul">
-                    <li>Inicio</li>
-                    <li>Info</li>
-                    <li>Imágenes</li>
-                    <li>Contacto</li>
-                </ul>
-            </nav>
+        <div class="head">
+            <h1>Tecnhoy</h1>
+            <p>Noticias 2.0</p>
+        </div>
+
+        <nav>
+            <ul class="ul">
+                <li>Inicio</li>
+                <li>Info</li>
+                <li>Imágenes</li>
+                <li>Contacto</li>
+            </ul>
+        </nav>
+
         </div>
     </header>
+    <main>
+        <nav>
+            <ul>
+                <li>Inicio <span class="fas fa-home"></span></li>
+                <li>Avances <span class="fas fa-rocket"></span></li>
+                <li>Computación <span class="fas fa-laptop"></span></li>
+                <li>Conectividad <span class="fas fa-wifi"></span></li>
+                <li>Programación <span class="fas fa-code"></span></li>
+                <li>Videojuegos <span class="fas fa-gamepad"></span></li>
+                <li>Telefonía <span class="fas fa-mobile"></span></li>
+            </ul>
+        </nav>
+        <div class="articles">
+            <article>
+                <h1>PS5: filtran precios de las 2 versiones de la consola y sus accesorios para el estreno oficial en el
+                    mundo</h1>
+                <h4>¿Eres fanático de los videojuegos y ya no puedes esperar por el lanzamiento de la PlayStation 5? En
+                    la
+                    siguiente nota que hemos preparado, te traemos algunas novedades de la consola, además de su precio
+                    en
+                    sus dos versiones.</h4>
+                <p>Para tenerlo en cuenta en el estreno oficial del mes de diciembre. Desde que se conoció el anuncio de
+                    su
+                    lanzamiento a finales del 2020, muchas han sido las dudas que han rodeado a la PlayStation 5, la
+                    nueva
+                    consola de Sony que promete marcar un antes y un después en la industria de los videojuegos. O al
+                    menos
+                    eso parece. Y es que además de la información que ya se conocía, hoy se filtraron nuevos detalles de
+                    la
+                    consola en redes sociales: el precio que es lo que vuelve loco a millones de usuarios en todo el
+                    planeta. Vamos con la información.</p>
+
+                <p> Tal y como había avisado Sony en un principio, la PlayStation 5 contará con dos versiones: una
+                    normal
+                    que incluye un lector de Blu-Ray para los juegos físicos, y otra versión PS5 Digital Edition que no
+                    cuenta con este lector óptico. ¿El motivo? Pues esto es debido a que esta consola está pensada para
+                    aquellos usuarios que únicamente jueguen con títulos comprados digitalmente.</p>
+                <img src="https://depor.com/resizer/8tHZ3mt_h--z0aEQFZvroHF6uJ8=/980x0/smart/cloudfront-us-east-1.images.arcpublishing.com/elcomercio/F6UFZBXDWVGD7LJ67AFHAK5UIA.jpg"
+                    alt="Precios PS5">
+
+                <p> En esta misma línea, Sony también dio a conocer al mundo el mando DualSense de la PS5, los
+                    auriculares,
+                    un mando a distancia, una cámara y una estación de carga para dos mandos, aunque sin mayores
+                    detalles.
+                    No obstante, no fue hasta hoy que en redes sociales se filtraron los que serían los precios de cada
+                    uno
+                    de estos accesorios, así como de ambas versiones de la nueva consola.</p>
+
+                <p> Así, como se observa en la imagen de arriba, finalmente parece ser que la PS5 en su versión normal
+                    tendrá un valor de 499,90 euros. Un precio racional, teniendo en cuenta que se especuló con que
+                    podría
+                    llegar a costar a 600 euros. Por otro lado, la PS5 Digital Edition sería mucho más barata, con un
+                    valor
+                    de 399,90 euros que es el precio que tenía en su momento la PS4 Pro, por ejemplo.</p>
+
+                <p> Siguiendo con los precios, Sony también vendería un soporte vertical a 19,90 euros. Asimismo, como
+                    bien
+                    se aprecia en la imagen filtrada por redes sociales, el mando DualSense costará alrededor de 59,90
+                    euros, mientras que la estación de carga doble para mandos tendrá un valor de 29,90 euros. La cámara
+                    HD
+                    y los auriculares inalámbricos, por su parte, valdrán 59,90 y 179,90 euros respectivamente. Una
+                    locura.
+                </p>
+
+                <p> Tras varios meses de espera y rumores, Sony compartió con la comunidad los primeros detalles de la
+                    PlayStation 5. En principio, la presentación fue anunciada a través de una publicidad en Twitch y
+                    luego
+                    fue confirmada en las redes sociales de PlayStation, con más de 40.000 reacciones y 15.000
+                    comentarios
+                    en cuestión de minutos. Sin dudas, la expectación de la comunidad fue total de cara al inicio de la
+                    nueva generación de videojuegos.</p>
+
+                <p>Entre sus principales características de hardware de la consola, la PS5 destaca por su CPU AMD Zen 2
+                    de
+                    8 núcleos y 16 hilos a 3.5 GHz., así como por tener un total de 16 GB de memoria RAM GDDR6
+                    compartida,
+                    con interfaz de 256 bits y ancho de banda de 448 GB/s. Por último, la nueva consola de Sony contará
+                    con
+                    una ranura NVMe adicional, un GPU AMD RDNA 2 con 32 CU, además de una frecuencia máxima de 2.23 GHz
+                    (10,28 TFLOPs). Simplemente perfecta.</p>
+            </article>
+            <article>
+                <h1>The Last of Us Parte 2 ha vendido más copias en Reino Unido que el resto de juegos top 10 combinados
+                </h1>
+                <h4>The Last of Us Parte 2 sigue generando grandes cifras en lo que a ventas se refiere. El título de
+                    Naughty Dog se mantiene en lo alto de las listas y consigue vender más que todo el resto de juegos
+                    top
+                    10 de Reino Unido combinados. </h4>
+                <p>The Last of Us Parte 2 era un juego muy esperado y uno de los lanzamientos de año. Tras mucho tiempo
+                    aguardando, el juego ha causado una verdadera oleada de opiniones, que se han traducido en una
+                    cobertura
+                    mediática, lo que ha generado unas grandes cifras en lo que a ventas se refiere.</p>
+
+                <p> El título de Naughty Dog se ha colocado como el juego más vendido de junio en gran cantidad de
+                    países.
+                    Entre los que más éxito ha tenido ha sido en Reino Unido, donde ha cosechado datos increíbles. Según
+                    informaba el portal Game Industry, The Last of Us Parte 2 ha vendido más que todos los juegos juntos
+                    que
+                    le siguen en el top diez de ventas.</p>
+
+                <p> Otros datos aportados por el informe destacan que las ventas de videojuegos en junio generaron hasta
+                    1,24 millones de juegos vendidos durante este período. Eso es un aumento de casi el 44% con respecto
+                    a
+                    mayo. Algo sumamente significativo.</p>
+
+
+
+                <p> Esto es un ejemplo de que la obra para PS4 ha sabido captar la atención de muchos gracias a su buen
+                    hacer. Los datos aseguran que más del 29% de los juegos vendidos en Reino Unido pertenecen a Sony,
+                    seguido de cerca por Nintendo y sus exclusivos. Os dejamos con la lista de los 20 juegos más
+                    vendidos.
+                </p>
+
+                <ul>
+                    <li>The Last of Us Part 2</li>
+                    <li>FIFA 20</li>
+                    <li>Ring Fit Adventure</li>
+                    <li> Animal Crossing: New Horizons</li>
+                    <li> Mario Kart 8: Deluxe</li>
+                    <li> Call of Duty: Modern Warfare</li>
+                    <li> Grand Theft Auto 5</li>
+                    <li> Minecraft (Switch)</li>
+                    <li> The Last of Us: Remastered</li>
+                    <li> Xenoblade Chronicles: Definitive Edition</li>
+                    <li> Star Wars Jedi: Fallen Order</li>
+                    <li> Bravely Second: End Layer</li>
+                    <li> 51 Worldwide Games</li>
+                    <li> Luigi's Mansion 3</li>
+                    <li> Forza Horizon 4</li>
+                    <li> Just Dance 2020</li>
+                    <li> Red Dead Redemption 2</li>
+                    <li> Marvel's Spider-Man</li>
+                    <li> Pokémon Espada</li>
+                    <li> Crash Bandicoot: N.Sane Trilogy</li>
+                </ul>
+                <img src="https://cdn.hobbyconsolas.com/sites/navi.axelspringer.es/public/styles/1200/public/media/image/2020/07/last-us-parte-2-1984339.jpeg?itok=t0GWLWQy"
+                    alt="The Last Of Us parte II">
+                <p> The Last of Us Parte 2 lidera la lista de los juegos más vendidos de GAME en junio de 2020. Sin
+                    embargo,
+                    la batalla por el más vendido se recrudece, Animal Crossing New Horizons vuelve a ser el más vendido
+                    en
+                    Japón, superando a The Last of Us Parte 2.</p>
+            </article>
+            <article>
+                <h1>México será de los primeros países de Latam en conectarse a redes 5G: Ericsson</h1>
+                <h4>América Latina alcanzará 90 millones de suscripciones 5G para 2025, que representará 13% de las
+                    suscripciones móviles de la región y el tráfico por teléfono inteligente sería de 22 GB mensuales.
+                </h4>
+
+                <img src="https://cdn.forbes.com.mx/2019/04/2018-11-29T150157Z_1950795114_RC153263C770_RTRMADP_3_GERMANY-VODAFONE-640x360.jpg"
+                    alt="antena 5G">
+                <p>Para 2025, México alcanzará un aproximado de 50% de cobertura 5G siendo uno de los países que más
+                    rápido
+                    adopte esta tecnología de América Latina, región que alcanzará 90 millones de suscripciones 5G para
+                    2025, que representaría 13% de las suscripciones móviles de la región y el tráfico por teléfono
+                    inteligente sería de 22 GB mensuales.</p>
+
+                <p> El Mobility Report 2020, uno de los estudios de conectividad más robustos a nivel mundial elaborado
+                    por
+                    la firma Ericsson, señala que otros de los países que se perfilan para activar estas redes de nueva
+                    generación de manera temprana en la región son Brasil, Colombia, Argentina y Chile.</p>
+
+                <p>Hace unos meses Börje Ekholm, presidente y CEO de Ericsson, ya adelantaba a Forbes México el interés
+                    y
+                    el crecimiento de este tipo de tecnologías para la región de América Latina en donde a México, sin
+                    duda
+                    lo señalaba como un país potencial.</p>
+
+                <p> Al menos en México dijo que no necesariamente hay que poner fechas de la entrada de esta tecnología,
+                    aunque sí señaló que se prevé sea para 2025.</p>
+
+                <p> “El proceso de adopción de la 5G en el país va más allá de calcular un año, tiene que ver con la
+                    disponibilidad de espectro. De ahí que, con uno liberado en términos razonables, se podrá
+                    implementar la
+                    red”, dijo aquella vez el sueco en entrevista.</p>
+
+                <p> A nivel global, el estudio pronostica que para finales de 2020 se podrían alcanzar 190 millones de
+                    suscripciones a la red 5G, mientras que la cifra aumentaría hasta las 2,800 millones de
+                    suscripciones en
+                    2025, lo que representaría 30% del total de suscripciones móviles a nivel global. Para ese mismo
+                    año, 5G
+                    podría cubrir al 65% de la población mundial.</p>
+
+                <p> El Mobility Report reveló que 83% de los usuarios de teléfonos inteligentes a nivel mundial
+                    aseguraron
+                    que las Tecnologías de la Información y Comunicación (TIC) los han ayudado a sobrellevar el
+                    confinamiento causado por la pandemia de COVID-19, al apoyarse en aplicaciones de educación en línea
+                    y
+                    bienestar, que dependen de una conexión estable e infraestructura confiable.</p>
+                </p>
+            </article>
+            <article>
+                <h1>Google borrará el historial de los usuarios automáticamente </h1>
+                <h4>La eliminación automática se ejecutará para un grupo específico de usuarios de ahora en adelante y
+                    cada
+                    18 meses. </h4>
+                <img src="https://elsol-compress-release.s3-accelerate.amazonaws.com/images/large/1593175121281google-auto-delete.jpg"
+                    alt="historial de google">
+                <p>Google ofrece muchos servicios, y por lo tanto recoge muchos datos personales.</p>
+
+                <p> Ya sea el historial de navegación en el navegador Chrome, el historial de visualización en YouTube o
+                    el
+                    historial de ubicación en Mapas, la empresa tiene armado un buen perfil de cada usuario. Esos datos
+                    pueden ayudar a personalizar las experiencias, pero también pueden dar lugar a preocupaciones sobre
+                    privacidad y seguridad.</p>
+
+                <p> La compañía anunció esta semana que borrará el historial de los nuevos usuarios después de 18 meses,
+                    de
+                    forma continua, por defecto.</p>
+
+                <p> El año pasado, Google comenzó a permitir que los usuarios eliminaran automáticamente su historial
+                    después de 3 o 18 meses, pero esto no estaba habilitado de forma predeterminada. En su lugar, tenían
+                    que
+                    elegir una opción de eliminación automática o de eliminación manual de su historial. Ahora, los
+                    usuarios
+                    existentes pueden ver recordatorios de que pueden utilizar esta función, pero la empresa no cambiará
+                    su
+                    configuración.</p>
+
+                <p> 18 meses parece una cantidad de tiempo razonable. Google podrá utilizar los datos históricos para
+                    personalizar las experiencias, como las sugerencias de vídeo en YouTube, pero no tendrá
+                    necesariamente
+                    un tesoro de información sobre la vida del usuario. La capacidad de especificar cuánto tiempo Google
+                    podría conservar los datos, en lugar de tener sólo las dos opciones de 3 o 18 meses, pero esta
+                    medida es
+                    un paso en la dirección correcta.</p>
+            </article>
+        </div>
+
+        <aside>
+            <h3>Quizás te interese...</h3>
+            <article>
+                <h4>Por qué las grandes multinacionales cortan la publicidad en Facebook</h4>
+                <img src="https://elsol-compress-release.s3-accelerate.amazonaws.com/images/large/1593437843730facebook%20ads%20fall.jpg"
+                    alt="Facebook">
+            </article>
+            <article>
+                <h4>Cuándo y cómo ver en vivo el evento WWDC </h4>
+                <img src="https://elsol-compress-release.s3-accelerate.amazonaws.com/images/large/1592828496321WWDC%202020%20Apple.jpg"
+                    alt="WWDC">
+            </article>
+            <article>
+                <h4>Esta es la imagen más completa del Universo </h4>
+                <img src="https://elsol-compress-release.s3-accelerate.amazonaws.com/images/large/1592909400754Universo-eROSITA.jpg"
+                    alt="Universo">
+            </article>
+            <button>Ver más</button>
+        </aside>
+    </main>
+
+    <footer>
+        <h4>© Copyright 2020 - Tecnhoy</h4>
+    </footer>
 
 </body>
 
